fixes ribbon offset of the admin bar on mobiles

--- a/2017-initial.css
+++ b/2017-initial.css
@@ -1036,6 +1036,13 @@ footer.entry-meta .sep {
 	top: 32px;
 }
 
+/* admin bar is taller on mobiles */
+@media screen and (max-width: 782px) {
+	.admin-bar .site-info .site-info-network {
+		top: 46px;
+	}
+}
+
 .site-info .site-info-network:hover {
 	color: #ff6f32;
 }
